tests/NormalTests/paczka1/fuzzy1/56484490.err
Error in line 16: X1FnOE S298 69,7
Error in line 24: JG2Q S865 39,2
